k8s/tictactoe-service.yml

apiVersion: v1
kind: Service
metadata:
  name: tictactoe
  labels:
    app: tictactoe
    tier: backend
spec:
  type: NodePort
  ports:
  - name: svcport
    port: 8080
    targetPort: 8080
  - name: debug
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: tictactoe
    tier: backend
